package pt.isep.psoft.alsafe.maintenancemanagement.domain;

public enum TemplateType {

    INSPECTION,

    SCHEDULED_MAINTENANCE,

    OVERHAUL,

    MODIFICATION
}